# fracada-il-primo

./: .gitignore  README.md  cabal.project  cabal.project.local~0  flake.nix  fracada-il-primo.cabal  hie.yaml  shell.nix
demo/: authorized_keys.txt  authorized_keys_s.txt  config.sh  currency-id.txt  datum.json  demo_config.sh  demo_params.sh  init-keys.sh  init.sh  mint_fake_nft.sh  mint_more_cont.sh  pparams.json  redeemer.json  sign_with_all.sh  signaturefiles.txt
demo/address/: fees.skey  fees.vkey  fees_stk.skey  fees_stk.vkey  key1.skey  key1.vkey  key2.skey  key2.vkey  key3.skey  key3.vkey  payment2.skey  payment2.vkey
demo/wallets/: fees.addr  payment2.addr  validator.addr
exe/: Emulator.hs  script-dump.hs
nix/: README.md  ci.nix  default.nix  haskell.nix  pab.nix  report.nix  sources.json
release/: OPERATIONS_GUIDE.md  add_nft.sh  add_nft_cont.sh  balance.sh  build-datum.sh  build-fraction-tokenname.sh  build-redeemer.sh  config.sh  exec_paths.sh  functions.sh  init_validator.sh  lock_nft.sh  mint_more.sh  mint_more_cont.sh  multisign_send.sh  params.sh  return_nft.sh  script-dump.sh  sign.sh  sign_send.sh
scripts/: Main.hs  add_nft.sh  authorized_keys.txt  balance.sh  build-datum.hs  build-fraction-tokenname.hs  build-redeemer.hs  config.sh  datum-dump.hs  exec_paths.sh  functions.sh  init-keys.sh  init-validator.sh  init_validator.sh  lock_nft.sh  mint_more.sh  params.sh  return_nft.sh  script-dump.hs  sign.hs  sign_send.sh
src/Fracada/: Constants.hs  Context.hs  Minting.hs  Offchain.hs  Utils.hs  Validator.hs
test/: TestUtxoLimit.hs  Trace.hs
test/Spec/: EvilEndpoints.hs  EvilValidator.hs  Fracada.hs  Scenarios.hs
testnet_demo/: README.md  app.ts  config.ts  constants.ts  endpoints.ts  package-lock.json  package.json  utils.ts
testnet_demo/backup/: change.addr  change.skey  change.vkey  payment.addr  payment.script  payment.skey  payment.vkey
