Cabal-Version:      2.4
Name:               fracada-il-primo
Version:            0.1.0.0
Author:             dcSpark
Maintainer:         github@dcspark.io
Build-Type:         Simple
Copyright:          © 2021 dcSpark
License:            NONE
License-files:      LICENSE


library
  hs-source-dirs:      src
  exposed-modules:     Fracada.Minting, Fracada.Validator, Fracada.Offchain
  build-depends:       aeson
                     -- , base ^>=4.14.1.0
                     , base 
                     , bytestring
                     , containers
                     , freer-extras
                     , plutus-core
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , cardano-ledger-alonzo
                     , cardano-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , text
                     , playground-common
                     , plutus-chain-index
                     , base16-bytestring

  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable           Emulator
  main-is:           Emulator.hs
  hs-source-dirs:    exe, src, test
  other-modules:     Fracada.Minting, Fracada.Validator, Fracada.Offchain, Spec.Scenarios, Spec.EvilEndpoints
  build-depends:     base
                    , fracada-il-primo
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , playground-common
                    , lens
                    , data-default
                    , tasty
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

-- executable           script-dump
--   main-is:           script-dump.hs
--   hs-source-dirs:    exe, src
--   other-modules:     Fracada.Minting, Fracada.Validator, Fracada.Offchain
--   build-depends:     base
--                     , fracada-il-primo
--                     , aeson
--                     , cardano-api
--                     , cardano-ledger-alonzo
--                     , cardano-api
--                     , bytestring
--                     , containers
--                     , freer-extras
--                     , plutus-core
--                     , plutus-contract
--                     , plutus-ledger
--                     , plutus-ledger-api
--                     , plutus-tx
--                     , plutus-tx-plugin
--                     , text
--                     , serialise
--                     , playground-common
--                     , base16-bytestring
--   default-language:   Haskell2010
--   default-extensions: DataKinds
--                       DeriveAnyClass
--                       DeriveGeneric
--                       DerivingStrategies
--                       ExplicitForAll
--                       FunctionalDependencies
--                       GADTs
--                       MultiParamTypeClasses
--                       NamedFieldPuns
--                       OverloadedStrings
--                       PolyKinds
--                       KindSignatures
--                       StandaloneDeriving
--                       TemplateHaskell
--                       TypeApplications
--                       TypeFamilies
--                       TypeOperators
--                       MultiParamTypeClasses
--                       ScopedTypeVariables
--                       StandaloneKindSignatures
--   ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable           fracada-scripts
  main-is:           Main.hs
  hs-source-dirs:    scripts, test

  other-modules:     Spec.Fracada, Spec.Scenarios, Spec.EvilEndpoints
  ghc-options:       -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities -rtsopts -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:     base
                    , aeson
                    , cardano-api
                    , fracada-il-primo
                    , optparse-applicative
                    , plutus-tx
                    , plutus-contract
                    , plutus-ledger
                    , base
                    , bytestring
                    , cardano-crypto-class
                    , containers
                    , data-default
                    , freer-extras
                    , prettyprinter
                    , tasty
                    , tasty-hunit
                    , tasty-hedgehog
                    , tasty-golden
                    , tasty-quickcheck
                    , text
                    , lens
                    , mtl
                    , QuickCheck
                    , freer-simple
                    , foldl
                    , streaming
                    , base16-bytestring
                    , playground-common
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures

test-suite          fracada-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test, exe, src
  other-modules:    Spec.Fracada, Spec.Scenarios, Fracada.Minting, Fracada.Validator, Fracada.Offchain, Spec.EvilEndpoints
  build-depends:     base
                    , fracada-il-primo
                    , aeson
                    , cardano-api
                  , cardano-crypto-class
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , playground-common
                  , freer-simple
                  , foldl
                  , streaming
                  , QuickCheck
                  , tasty
                  , tasty-hunit
                  , tasty-hedgehog
                  , tasty-golden
                  , tasty-quickcheck
                  , mtl
                    , lens
                    , data-default
                    , tasty
                    , base16-bytestring 
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise   
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any               
