Cabal-Version:      2.4
Name:               fracada-il-primo
Version:            0.1.0.0
Author:             dcSpark
Maintainer:         github@dcspark.io
Build-Type:         Simple
Copyright:          © 2021 dcSpark
License:            NONE
License-files:      LICENSE

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: True
    manual: True

flag erase-costly-newtypes
    description:
        Newtypes aren't zero-cost in Plutus (especially on script size).
        This flag enables type erasure for production
    default: False
    manual: True

flag erase-debug-messages
    description:
        Debug messages take some space in on-chain scripts.
        This flags removes them.
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Fracada.Minting, Fracada.Validator, Fracada.Offchain, Fracada.Utils, Fracada.Context, Fracada.Constants
  build-depends:       aeson
                     , base
                     , containers
                     , plutus-core
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx
                     , plutus-tx-plugin
                     , text
                     , playground-common
                     , base16-bytestring

  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:   -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
                 -fplugin-opt PlutusTx.Plugin:defer-errors

executable trace
    main-is:            Trace.hs
    hs-source-dirs:     test, src
    other-modules:      Fracada.Minting, Fracada.Validator, Fracada.Offchain, Spec.EvilEndpoints, Spec.EvilValidator, Fracada.Utils, Fracada.Context, Fracada.Constants
    ghc-options:        -main-is Trace
                        -fno-specialise
    build-depends:      aeson
                        , fracada-il-primo
                        , base ^>=4.14.1.0
                        , base16-bytestring
                        , bytestring
                        , data-default
                        , extra
                        , flat
                        , foldl
                        , freer-simple
                        , containers
                        , lens
                        , playground-common
                        , plutus-contract
                        , plutus-core
                        , plutus-ledger
                        , plutus-ledger-api
                        , plutus-ledger-constraints
                        , plutus-tx
                        , plutus-tx-plugin
                        , streaming
                        , tasty
                        , tasty-hunit
                        , text
    default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      EmptyDataDecls
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
    cpp-options:      -DDEBUG

executable           build-datum
  main-is:           build-datum.hs
  hs-source-dirs:    scripts, src
  other-modules:     Fracada.Validator, Fracada.Utils, Fracada.Context, Fracada.Constants
  build-depends:     base
                    , aeson
                    , cardano-api
                    , bytestring
                    , containers
                    , plutus-core
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , cardano-api
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:   -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
                 -fplugin-opt PlutusTx.Plugin:defer-errors

executable           build-redeemer
  main-is:           build-redeemer.hs
  hs-source-dirs:    scripts, src
  other-modules:     Fracada.Validator, Fracada.Utils, Fracada.Context, Fracada.Constants, Fracada.Minting
  build-depends:     base
                    , aeson
                    , containers
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
                    , cardano-api
                    , hex
                    , bytestring
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wpartial-fields
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fplugin-opt PlutusTx.Plugin:defer-errors

executable           build-fraction-tokenname
  main-is:           build-fraction-tokenname.hs
  hs-source-dirs:    scripts, src
  other-modules:     Fracada.Validator, Fracada.Utils, Fracada.Context, Fracada.Constants, Fracada.Minting
  build-depends:     base
                    , aeson
                    , containers
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
                    , cardano-api
                    , hex
                    , bytestring
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wpartial-fields
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fplugin-opt PlutusTx.Plugin:defer-errors

executable           script-dump
  main-is:           script-dump.hs
  hs-source-dirs:    scripts, src
  other-modules:     Fracada.Minting, Fracada.Validator, Fracada.Offchain, Fracada.Utils, Fracada.Context, Fracada.Constants
  build-depends:     base
                    , fracada-il-primo
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , cardano-crypto
                    , bytestring
                    , containers
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-constraints
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wpartial-fields
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fno-specialise
                      -fplugin-opt PlutusTx.Plugin:defer-errors

executable           fracada-scripts
  main-is:           Main.hs
  hs-source-dirs:    src, scripts, test

  other-modules:     Spec.Fracada, Spec.Scenarios, Spec.EvilEndpoints, Spec.EvilValidator, Fracada.Utils, Fracada.Context, Fracada.Minting, Fracada.Offchain, Fracada.Validator, Fracada.Constants
  ghc-options:       -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wpartial-fields
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:     base
                    , aeson
                    , cardano-api
                    , fracada-il-primo
                    , optparse-applicative
                    , plutus-core
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , base
                    , bytestring
                    , cardano-crypto-class
                    , containers
                    , data-default
                    , prettyprinter
                    , tasty
                    , tasty-hunit
                    , tasty-hedgehog
                    , tasty-golden
                    , tasty-quickcheck
                    , text
                    , lens
                    , mtl
                    , QuickCheck
                    , freer-simple
                    , foldl
                    , streaming
                    , base16-bytestring
                    , playground-common
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures

test-suite          fracada-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test, src
  other-modules:    Spec.Fracada, Spec.Scenarios, Fracada.Minting, Fracada.Validator, Fracada.Offchain, Spec.EvilEndpoints, Spec.EvilValidator, Fracada.Utils, Fracada.Context, Fracada.Constants
  build-depends:     base
                    , fracada-il-primo
                    , aeson
                    , cardano-api
                    , cardano-crypto
                    , cardano-crypto-class
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , playground-common
                    , freer-simple
                    , foldl
                    , streaming
                    , QuickCheck
                    , tasty
                    , tasty-hunit
                    , tasty-hedgehog
                    , tasty-golden
                    , tasty-quickcheck
                    , mtl
                    , lens
                    , data-default
                    , tasty
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wpartial-fields
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fno-specialise
                      -fplugin-opt PlutusTx.Plugin:defer-errors
  cpp-options:        -DDEBUG

executable            test-utxo-limit
  main-is:            TestUtxoLimit.hs
  hs-source-dirs:     test, src
  ghc-options:        -main-is TestUtxoLimit
  other-modules:      Fracada.Minting, Fracada.Validator, Fracada.Offchain, Fracada.Utils, Fracada.Context, Fracada.Constants
  build-depends:      base
                    , fracada-il-primo
                    , aeson
                    , cardano-api
                    , cardano-crypto
                    , cardano-crypto-class
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-simple-model
                    , plutus-tx
                    , text
                    , playground-common
                    , freer-simple
                    , foldl
                    , streaming
                    , QuickCheck
                    , tasty
                    , tasty-hunit
                    , tasty-hedgehog
                    , tasty-golden
                    , tasty-quickcheck
                    , mtl
                    , lens
                    , data-default
                    , tasty
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wpartial-fields
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fno-specialise
                      -fplugin-opt PlutusTx.Plugin:defer-errors

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any